deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-diff-reporter
  namespace: argocd
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: argocd-diff-reporter
  type: ClusterIP
